--- a/styles/main.css
+++ b/styles/main.css
@@ -730,8 +730,15 @@ body {
 
 .output-wrapper {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
+.output {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 .output__header {
   background-color: var(--color-console-background-alt);
   border: var(--color-console-border);
@@ -786,6 +793,7 @@ body {
   font-weight: 400;
   font-size: var(--font-size-regular);
   color: #fff;
+  flex-grow: 1;
 }
 
 /*# sourceMappingURL=main.css.map */
